# senso

./: .env.e2e.example  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUG_BASH.md  CONCEPT.md  CONVENTIONS.md  README.md  README.md.bak  config.json  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  entities.json  mempalace.yaml  plan.md  prek.toml  vite.config.ts
api/: Dockerfile  pyproject.toml  test_phase18.db  test_phase20.db
api/app/: config.json  main.py  startup_validator.py
api/app/api/: admin.py  attachments.py  auth.py  coaching.py  content_admin.py  content_public.py  debug.py  ingestion.py  internal.py  messages.py  notifications.py  profile.py
api/app/coaching/: safety.py  service.py  tts.py
api/app/content/: articles.json  partners.json  search.py  slides.json  videos.json
api/app/core/: config.py  llm_config.py  security.py
api/tests/: Dockerfile.llm-stub  conftest.py  llm_stub_server.py  test_auth_crypto_identity.py  test_auth_endpoints.py  test_bip39_recovery.py  test_coaching_cards.py  test_coaching_endpoints.py  test_coaching_service.py  test_coaching_tools.py  test_config_caps.py  test_content_admin.py  test_content_public.py  test_content_search_db.py  test_crypto.py  test_encryption.py  test_enrichment_pipeline.py  test_envelope_migration.py  test_ingestion_dedup.py  test_ingestion_endpoints.py  test_kdf_interop.py  test_llm_noretention.py  test_messages.py  test_module_registry.py  test_nacl_crypto.py  test_profile_endpoints.py  test_safety_hardening.py  test_stt_endpoint.py  test_tts.py  test_username_generator.py
be/: test.db  (+2 more)
(+1096 files in other folders)
