[project]
name = "senso-api"
version = "0.1.0"
description = "S.E.N.S.O. FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "bcrypt>=4.2.0",
  "fastapi>=0.115.0",
  "PyJWT>=2.9.0",
  "pydantic>=2.9.0",
  "python-dotenv>=1.0.0",
  "sqlalchemy>=2.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = [
  "api",
]
testpaths = ["api/tests"]
