[project]
name = "senso-api"
version = "0.1.0"
description = "S.E.N.S.O. FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "bcrypt>=4.2.0",
  "uuid-utils>=0.9.0",
  "fastapi>=0.115.0",
  "PyJWT>=2.9.0",
  "pydantic[email]>=2.9.0",
  "python-dotenv>=1.0.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.9",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.22",
  "minio>=7.2.20",
  "openai>=1.0.0",
  "elevenlabs>=2.40.0",
  "openpyxl>=3.1.0",
  "jinja2>=3.1.6",
  "jsonschema>=4.26.0",
  "pyyaml>=6.0.3",
  "liteparse>=1.2.1",
  "rank-bm25>=0.2.2",
  "python-slugify>=8.0.0",
  "python-dateutil>=2.9.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "api",
]
testpaths = ["tests", "api/tests"]
